--- a/index.html
+++ b/index.html
@@ -7,45 +7,48 @@
     <link rel="stylesheet" href="style.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="parallax.min.js"></script>
+    <link
+      href="https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css"
+      rel="stylesheet"
+    />
     <title>Leila Habchy</title>
   </head>
   <body>
+    <header class="l-header" id="header">
+      <nav class="nav bd-container">
+        <a href="#" class="nav__logo">Leila Habchy</a>
+
+        <div class="nav__menu" id="nav-menu">
+          <ul class="nav__list">
+            <li class="nav__item">
+              <a href="#home" class="nav__link active-link">Test</a>
+            </li>
+            <li class="nav__item">
+              <a href="#about" class="nav__link">Test</a>
+            </li>
+            <li class="nav__item">
+              <a href="#services" class="nav__link">Test</a>
+            </li>
+            <li class="nav__item">
+              <a href="#menu" class="nav__link">Test</a>
+            </li>
+            <li class="nav__item">
+              <a href="#contact" class="nav__link">Test</a>
+            </li>
+
+            <li>
+              <i class="bx bx-moon change-theme" id="theme-button"></i>
+            </li>
+          </ul>
+        </div>
+
+        <div class="nav__toggle" id="nav-toggle">
+          <i class="bx bx-menu"></i>
+        </div>
+      </nav>
+    </header>
     <div class="parallax-container">
-      <div class="parallax">
-        <header class="l-header" id="header">
-          <nav class="nav bd-container">
-            <a href="#" class="nav__logo">Tasty</a>
-
-            <div class="nav__menu" id="nav-menu">
-              <ul class="nav__list">
-                <li class="nav__item">
-                  <a href="#home" class="nav__link active-link">Home</a>
-                </li>
-                <li class="nav__item">
-                  <a href="#about" class="nav__link">About</a>
-                </li>
-                <li class="nav__item">
-                  <a href="#services" class="nav__link">Services</a>
-                </li>
-                <li class="nav__item">
-                  <a href="#menu" class="nav__link">Menu</a>
-                </li>
-                <li class="nav__item">
-                  <a href="#contact" class="nav__link">Contact us</a>
-                </li>
-
-                <li>
-                  <i class="bx bx-moon change-theme" id="theme-button"></i>
-                </li>
-              </ul>
-            </div>
-
-            <div class="nav__toggle" id="nav-toggle">
-              <i class="bx bx-menu"></i>
-            </div>
-          </nav>
-        </header>
-      </div>
+      <div class="parallax"></div>
     </div>
 
     <div class="container">
