--- a/index.html
+++ b/index.html
@@ -14,47 +14,47 @@
     <title>Leila Habchy</title>
   </head>
   <body>
-    <header class="l-header" id="header">
-      <nav class="nav bd-container">
-        <a href="#" class="nav__logo">Leila Habchy</a>
-
-        <div class="nav__menu" id="nav-menu">
-          <ul class="nav__list">
-            <li class="nav__item">
-              <a href="#home" class="nav__link active-link">Test</a>
-            </li>
-            <li class="nav__item">
-              <a href="#about" class="nav__link">Test</a>
-            </li>
-            <li class="nav__item">
-              <a href="#services" class="nav__link">Test</a>
-            </li>
-            <li class="nav__item">
-              <a href="#menu" class="nav__link">Test</a>
-            </li>
-            <li class="nav__item">
-              <a href="#contact" class="nav__link">Test</a>
-            </li>
-
-            <li>
-              <i class="bx bx-moon change-theme" id="theme-button"></i>
-            </li>
-          </ul>
-        </div>
-
-        <div class="nav__toggle" id="nav-toggle">
-          <i class="bx bx-menu"></i>
-        </div>
-      </nav>
-    </header>
     <div class="parallax-container">
-      <div class="parallax"></div>
+      <div class="parallax">
+        <header class="l-header" id="header">
+          <nav class="nav bd-container">
+            <a href="#" class="nav__logo">على خطى ليلى</a>
+
+            <div class="nav__menu" id="nav-menu">
+              <ul class="nav__list">
+                <li class="nav__item">
+                  <a href="#first" class="nav__link active-link"
+                    >لن ننساك أبداً</a
+                  >
+                </li>
+                <li class="nav__item">
+                  <a href="#second" class="nav__link">لك</a>
+                </li>
+                <li class="nav__item">
+                  <a href="#third" class="nav__link">صور</a>
+                </li>
+                <li class="nav__item">
+                  <a href="#fourth" class="nav__link">نحبك</a>
+                </li>
+                <li class="nav__item">
+                  <a href="#fifth" class="nav__link">على خطى ليلى</a>
+                </li>
+              </ul>
+            </div>
+
+            <div class="nav__toggle" id="nav-toggle">
+              <i class="bx bx-menu"></i>
+            </div>
+          </nav>
+        </header>
+      </div>
     </div>
 
     <div class="container">
       <div class="scroll-container">
         <div class="scroll-area">
           <img
+            id="first"
             src="assets/WhatsApp Image 2022-03-11 at 2.01.19 PM (1).jpeg"
             alt=""
             class="img-scroll"
@@ -62,6 +62,7 @@
         </div>
         <div class="scroll-area">
           <img
+            id="second"
             src="assets/WhatsApp Image 2022-03-11 at 2.01.19 PM.jpeg"
             alt=""
             class="img-scroll"
@@ -69,6 +70,7 @@
         </div>
         <div class="scroll-area">
           <img
+            id="third"
             src="assets/pexels-nadi-lindsay-4982878.jpg"
             alt=""
             class="img-scroll"
@@ -76,6 +78,7 @@
         </div>
         <div class="scroll-area">
           <img
+            id="fourth"
             src="assets/pexels-yunus-tuğ-8120844.jpg"
             alt=""
             class="img-scroll"
@@ -83,6 +86,7 @@
         </div>
         <div class="scroll-area">
           <img
+            id="fifth"
             src="assets/pexels-zsófia-fehér-11405127.jpg"
             alt=""
             class="img-scroll"
