ACTIVE LINK BUG FIX

--- a/index.html
+++ b/index.html
@@ -23,9 +23,7 @@
             <div class="nav__menu" id="nav-menu">
               <ul class="nav__list">
                 <li class="nav__item">
-                  <a href="#first" class="nav__link active-link"
-                    >لن ننساك أبداً</a
-                  >
+                  <a href="#first" class="nav__link">لن ننساك أبداً</a>
                 </li>
                 <li class="nav__item">
                   <a href="#second" class="nav__link">لك</a>
